--- a/src/pages/LandingPage/index.css
+++ b/src/pages/LandingPage/index.css
@@ -1,4 +1,4 @@
-img {
+.LandingPage__leftBackground {
   height: 100%;
   margin: -2px;
   opacity: 0.5;
@@ -23,17 +23,37 @@ img {
 }
 
 .LandingPage__left::after {
-  width:100%;
-  content:'';
   display:block;
   position:absolute;
   top:0;
   left:0;
-  background: linear-gradient(to left, rgba(43, 55, 64,1) 0%,rgba(255,255,255,0) 69%);
   height:100%;
+  width:100%;
+  content:'';
+  background: linear-gradient(to left, rgba(43, 55, 64,1) 0%,rgba(255,255,255,0) 69%);
 }
 
 .LandingPage__right {
-  background-color: #2B3740;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   right: 0;
+  background-color: #2B3740;
+  color: #AADBFF;
+}
+
+.LandingPage__name {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.LandingPage__description {
+  font-size: 30px;
+}
+
+.LandingPage__mePhoto {
+  margin-bottom: 30px;
+  border-radius: 100%;
+  height: 300px;
 }
