--- a/src/pages/LandingPage/index.css
+++ b/src/pages/LandingPage/index.css
@@ -1,74 +1,64 @@
-.LandingPage__leftBackground {
-  height: 100%;
-  margin: -2px;
-  opacity: 0.5;
-}
-
 .LandingPage {
-  height: 100%;
-}
-
-.split {
-  height: 100%;
-  width: 50%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  overflow-x: hidden;
-}
-
-.LandingPage__left {
-  left: 0;
-  background-color: #2B3740;
-}
-
-.LandingPage__left::after {
-  display:block;
-  position:absolute;
-  top:0;
-  left:0;
-  height:100%;
-  width:100%;
-  content:'';
-  background: linear-gradient(to left, rgba(43, 55, 64,1) 0%,rgba(255,255,255,0) 69%);
-}
-
-.LandingPage__right {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  width: 100%;
   align-items: center;
   justify-content: center;
-  right: 0;
-  background-color: #2B3740;
+  position: relative;
+  background: url('../../img/landing-page.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
   color: #AADBFF;
 }
 
-.LandingPage__name {
-  font-size: 40px;
-  font-weight: bold;
-}
-
-.LandingPage__description {
-  font-size: 30px;
-}
-
-.LandingPage__mePhoto {
-  margin-bottom: 30px;
+.LandingPage__mePicture {
+  margin: 30px 0;
   border-radius: 100%;
-  height: 300px;
+  height: 150px;
+  z-index: 1;
+}
+
+.LandingPage__content {
+  z-index: 1;
+  text-align: center;
 }
 
 .LandingPage__links {
   display: flex;
+  z-index: 1;
 }
 
 .LandingPage__link {
-  height: 40px;
+  height: 30px;
   margin: 20px;
 }
 
+.LandingPage__background {
+  width: 100%;
+  height: 100%;
+  background: #2B3740;
+  opacity: .8;
+  position: absolute;
+}
+
+.LandingPage__name {
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.LandingPage__title {
+  font-size: 40px;
+}
+
 @media (max-width: 766px) {
-  .LandingPage {
-    display: none;
+  .LandingPage__name {
+    font-size: 30px;
+    font-weight: bold;
+  }
+  
+  .LandingPage__title {
+    font-size: 25px;
   }
 }
