--- a/src/pages/LandingPage/index.css
+++ b/src/pages/LandingPage/index.css
@@ -16,7 +16,7 @@
 .LandingPage__mePicture {
   margin: 30px 0;
   border-radius: 100%;
-  height: 150px;
+  height: 300px;
   z-index: 1;
 }
 
@@ -27,12 +27,13 @@
 
 .LandingPage__links {
   display: flex;
+  margin-top: 100px;
   z-index: 1;
 }
 
 .LandingPage__link {
-  height: 30px;
-  margin: 20px;
+  height: 60px;
+  margin: 0 70px;
 }
 
 .LandingPage__background {
@@ -56,6 +57,18 @@
   .LandingPage__name {
     font-size: 30px;
     font-weight: bold;
+  }
+
+  .LandingPage__links {
+    margin-top: 30px;
+  }
+
+  .LandingPage__link {
+    margin: 0 30px;
+  }
+
+  .LandingPage__mePicture {
+    height: 200px;
   }
   
   .LandingPage__title {
