Refactor LandingPage and add hobbies page

--- a/src/pages/LandingPage/index.css
+++ b/src/pages/LandingPage/index.css
@@ -45,7 +45,7 @@
 }
 
 .LandingPage__move {
-  margin-bottom: -4px;
+  margin-bottom: -5px;
   width: 100%;
 }
 
@@ -78,5 +78,9 @@
   
   .LandingPage__title {
     font-size: 25px;
+  }
+
+  .LandingPage__move {
+    display: none;
   }
 }
